--- a/index.html
+++ b/index.html
@@ -9,7 +9,129 @@
     <title>Bootstrap</title>
 </head>
 <body>
-<h2>Welcome to Bootrap humans</h2>
+<!--start of navbar-->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid bg-danger">
+    <a class="navbar-brand" href="#">Java Class</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About Us</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Coourses
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Python</a></li>
+            <li><a class="dropdown-item" href="#">Javascript</a></li>
+              <li><a class="dropdown-item" href="#">Data science</a></li>
+               <li><a class="dropdown-item" href="#">Machine Learning</a></li>
+<!--            <li><hr class="dropdown-divider">Info</li>-->
+<!--            <li><a class="dropdown-item" href="#">Contact Us</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link disabled" aria-disabled="true">Disabled</a>-->
+<!--        </li>-->
+      </ul>
+          <li class="nav-item">
+          <a class="nav-link" href="#">Mobi girlz</a>
+        </li>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+<!--        <button class="btn btn-outline-success" type="submit">Search</button>-->
+      </form>
+    </div>
+  </div>
+</nav>
+<!--end of navbar-->
+<!--start of carousel-->
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./Assets/images/young-stylish-girl-black-trousers-blouse-red-hat-is-looking-shiny-dresses-while-shopping-pink-background.jpg" class="d-block w-100 h-200" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./Assets/images/portrait-woman-with-cheerful-makeup.jpg" class="d-block w-100 h-200" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./Assets/images/makeup-brushes-with-whirling-pink-powder.jpg" class="d-block w-100 h-200" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<!--end of carousel-->
+<!--card  starts-->
+<div class="card" style="width: 18rem;">
+  <img src="./Assets/images/img.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Safaricom voLTE</h5>
+    <p class="card-text">Enjoy a range of different services provided by the network for your personal needs</p>
+    <a href="#" class="btn btn-primary">Find out more</a>
+  </div>
+</div>
+<!--card ends-->
+<!--modal starts-->
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--modal ends-->
+<div class="container-fluid bg-warning-subtle text-center p-5 text-black">
+    <h2>Welcome to Java Class</h2>
+</div>
+<div class="container-fluid mt-4">
+    <div class="row">
+        <div class="col-4 bg-primary">
+            <h2>Column One</h2>
+            <img src="Assets/images/woman-black-trousers-purple-blouse-laughs-leaning-stand-with-elegant-clothes-pink-background.jpg" width="225" height="225">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet, esse explicabo facilis hic nam quidem saepe similique tempore tenetur. Architecto doloremque dolores quisquam reprehenderit voluptatum! Expedita nemo ratione temporibus.</p>
+        </div>
+        <div class="col-4 bg-secondary">
+            <img src="Assets/images/brunette-girl-red-beret-laughs-sitting-chair-with-folder-her-hands-lady-with-red-lipstick-posing-pink-background-with-stand-with-shiny-dresses.jpg" width="225" height="225" >
+            <h2>Column Two</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam cupiditate est incidunt nobis numquam quam quidem quos? Blanditiis delectus illo minus neque nesciunt nobis nostrum quia similique veritatis voluptatum?</p>
+        </div>
+        <div class="col-4 bg-warning">
+            <img src="./Assets/images/makeup-brushes-with-whirling-pink-powder.jpg" alt="" width="225" height="225">
+            <h2>Column Three</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, blanditiis consequatur, dolores esse et excepturi expedita facilis harum inventore iste libero magnam minima necessitatibus odio ratione recusandae saepe sequi vitae.</p>
+        </div>
+    </div>
+</div>
 <script src="Assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
